--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,71 @@
-
-
 .ticket-title {
-	font-weight:bold;
-	font-size:20px;
-	margin-left:10px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 10px;
 }
 .answered {
-	font-size:10px;
-	color:#ffffff;
-	background-color:#7079d6;
-	margin:0px 0px 0px 5px;
+  font-size: 10px;
+  color: #ffffff;
+  background-color: #7079d6;
+  margin: 0px 0px 0px 5px;
 }
 
-.navbar .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: #274181;
-    color: #ffffff;
-border-radius: 10%;
+.navbar .navbar-right {
+  /* background-color: #274181; */
+}
+.navbar .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  background-color: #274181;
+  
+  border-radius: 10%;
+}
+
+.navbar .navbar-nav  span {
+  background-color: #274181;
+ 
+}
+.navbar .navbar-nav .dropdown-menu a {
+  color: #fff;
+}
+.navbar .navbar-nav .dropdown-menu a:hover {
+  
+  font-weight: bolder;
 }
 
 .navbar .navbar-nav {
-	display: block;
-	padding: 1px;
+  display: block;
+  padding: 1px;
 }
 
 #scroll {
-	width: 100%;
-	height: 100%;
-	background-color: black;
+  width: 100%;
+  height: 100%;
+  background-color: black;
 }
 
-
 #logo {
-	width: 100%;
-	height: 100px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-    margin-bottom: 30px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 #logo img {
-object-fit: contain;
+  object-fit: contain;
 }
 
 .panel {
-	
-	border-radius: 20px !important;
-	background: linear-gradient(145deg, #ffffff, #e6e6e6);
-	box-shadow:  7px 7px 14px #274181,
-             -7px -7px 14px #ffffff;
-	
+  border-radius: 20px !important;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow: 7px 7px 14px #274181, -7px -7px 14px #ffffff;
 }
 
 #ticketReply {
-	border-radius: 20px !important;
+  border-radius: 20px !important;
   background: linear-gradient(145deg, #ffffff, #e6e6e6);
-	box-shadow:  7px 7px 14px #274181,
-             -7px -7px 14px #ffffff;
+  box-shadow: 7px 7px 14px #274181, -7px -7px 14px #ffffff;
 }
 
 #panel-head {
@@ -65,11 +74,9 @@ object-fit: contain;
 }
 
 .panel-heading {
- 
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
-
 
 #reply-head {
   background-color: #274181;
@@ -77,41 +84,39 @@ object-fit: contain;
 }
 
 .container.contact {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100vh; 
-
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .panel .panel-title {
-	text-align: center;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .loginBtn {
-	width: 100%;
-	height: 100%;
-	background-color: #274181;
-	color: #ffffff;
-	margin: auto;
-	transition: 0.5s;
+  width: 100%;
+  height: 100%;
+  background-color: #274181;
+  color: #ffffff;
+  margin: auto;
+  transition: 0.5s;
 }
 
 .loginBtn:hover {
-	background-color: #ffffff;
-	color: #274181 !important;
-	border: 1px solid #274181;
+  background-color: #ffffff;
+  color: #274181 !important;
+  border: 1px solid #274181;
 }
 
 .btn:hover {
-	color:#ffffff;
+  color: #ffffff;
 }
 
 .input-group span {
-	background-color: #274181;
-	color: #ffffff;
+  background-color: #274181;
+  color: #ffffff;
 }
 
 /* .form-control{
@@ -124,222 +129,224 @@ height: 100vh;
 } */
 
 .table {
-	border-radius: 20px;
+  border-radius: 20px;
 }
 
 .table tbody {
-	border-radius: 20px;
+  border-radius: 20px;
 }
 
-.table th{
-	background-color: #274181;
-	color: #ffffff;
-	text-align: center;
+.table th {
+  background-color: #274181;
+  color: #ffffff;
+  text-align: center;
 }
 
 .table th:last-child {
-	border-top-right-radius: 20px;
-	/* border-radius: 20px; */
+  border-top-right-radius: 20px;
+  /* border-radius: 20px; */
 }
 
 .table th:first-child {
-	border-top-left-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
+table.dataTable td:nth-child(5) {
+  max-width: 100px;
+}
+table.dataTable td {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .table td {
-	text-align: center;
+  text-align: center;
 }
 
-button.dt-button, div.dt-button, a.dt-button, input.dt-button {
-    border-radius: 2px;
-    color: white;
-    background-color: #274181;
-	transition: 0.5s;
-	border-radius: 5px;
-	/* margin-right: 30px; */
+button.dt-button,
+div.dt-button,
+a.dt-button,
+input.dt-button {
+  border-radius: 2px;
+  color: white;
+  background-color: #274181;
+  transition: 0.5s;
+  border-radius: 5px;
+  /* margin-right: 30px; */
 }
 
-button.dt-button:hover:not(.disabled), div.dt-button:hover:not(.disabled), a.dt-button:hover:not(.disabled), input.dt-button:hover:not(.disabled) {
-    border: 1px solid #274181;
-    background-color: #ffffff;
-	color: #274181;
-	font-weight: bolder;
-	
+button.dt-button:hover:not(.disabled),
+div.dt-button:hover:not(.disabled),
+a.dt-button:hover:not(.disabled),
+input.dt-button:hover:not(.disabled) {
+  border: 1px solid #274181;
+  background-color: #ffffff;
+  color: #274181;
+  font-weight: bolder;
 }
-
-
-
-
-
 
 /* PAGINATION From Source Code*/
 
-
 .pagination {
-    display: inline-block;
-    padding-left: 0;
-    margin: 20px 0;
-    border-radius: 4px;
+  display: inline-block;
+  padding-left: 0;
+  margin: 20px 0;
+  border-radius: 4px;
 }
 
-.pagination>li {
-    display: inline
+.pagination > li {
+  display: inline;
 }
 
-.pagination>li>a,.pagination>li>span {
-    position: relative;
-    float: left;
-    padding: 6px 12px;
-    /* margin-left: -1px; */
-    line-height: 1.42857143;
-    color: #fff;
-    text-decoration: none;
-    background-color: #274181;
-    border: 1px solid #ddd;
-	transition: 0.4s;
-	margin-top: 20px;
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  /* margin-left: -1px; */
+  line-height: 1.42857143;
+  color: #fff;
+  text-decoration: none;
+  background-color: #274181;
+  border: 1px solid #ddd;
+  transition: 0.4s;
+  margin-top: 20px;
 }
 
-.pagination>li:first-child>a,.pagination>li:first-child>span {
-    margin-left: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  margin-left: 0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
-.pagination>li:last-child>a,.pagination>li:last-child>span {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
-.pagination>li>a:focus,.pagination>li>a:hover,.pagination>li>span:focus,.pagination>li>span:hover {
-    z-index: 3;
-    color: #23527c;
-    background-color: #eee;
-    border-color: #ddd
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
+  z-index: 3;
+  color: #23527c;
+  background-color: #eee;
+  border-color: #ddd;
 }
 
-.pagination>.active>a,.pagination>.active>a:focus,.pagination>.active>a:hover,.pagination>.active>span,.pagination>.active>span:focus,.pagination>.active>span:hover {
-    z-index: 2;
-    color: #23527c;
-    cursor: default;
-    background-color: #fff;
-    border-color:#23527c;
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+  z-index: 2;
+  color: #23527c;
+  cursor: default;
+  background-color: #fff;
+  border-color: #23527c;
 }
 
-.pagination>.disabled>a,.pagination>.disabled>a:focus,.pagination>.disabled>a:hover,.pagination>.disabled>span,.pagination>.disabled>span:focus,.pagination>.disabled>span:hover {
-    color: #777;
-    cursor: not-allowed;
-    background-color: #274181;
-    border-color: #ddd;
+.pagination > .disabled > a,
+.pagination > .disabled > a:focus,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > span,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > span:hover {
+  color: #777;
+  cursor: not-allowed;
+  background-color: #274181;
+  border-color: #ddd;
 }
 
-.pagination-lg>li>a,.pagination-lg>li>span {
-    padding: 10px 16px;
-    font-size: 18px;
-    line-height: 1.3333333
+.pagination-lg > li > a,
+.pagination-lg > li > span {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.3333333;
 }
 
-.pagination-lg>li:first-child>a,.pagination-lg>li:first-child>span {
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px
+.pagination-lg > li:first-child > a,
+.pagination-lg > li:first-child > span {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 
-.pagination-lg>li:last-child>a,.pagination-lg>li:last-child>span {
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px
+.pagination-lg > li:last-child > a,
+.pagination-lg > li:last-child > span {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
-.pagination-sm>li>a,.pagination-sm>li>span {
-    padding: 5px 10px;
-    font-size: 12px;
-    line-height: 1.5
+.pagination-sm > li > a,
+.pagination-sm > li > span {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
 }
 
-.pagination-sm>li:first-child>a,.pagination-sm>li:first-child>span {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px
+.pagination-sm > li:first-child > a,
+.pagination-sm > li:first-child > span {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
 
-.pagination-sm>li:last-child>a,.pagination-sm>li:last-child>span {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px
+.pagination-sm > li:last-child > a,
+.pagination-sm > li:last-child > span {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
-
-
 
 /* End Of Pagination  */
 
-
-
-
 #listTickets {
-	border-radius: 20px;
-background: linear-gradient(145deg, #ffffff, #e6e6e6);
-box-shadow:  7px 7px 14px #666666,
-             -7px -7px 14px #ffffff;
+  border-radius: 20px;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow: 7px 7px 14px #666666, -7px -7px 14px #ffffff;
 }
-
-
-
-
-
-
-
 
 /* Ticket Model  */
 
 .modal-content {
-	border-radius: 20px;
+  border-radius: 20px;
 }
 
 .modal-header {
-	background-color: #274181;
-	color: #ffffff;
-	text-align: center;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
+  background-color: #274181;
+  color: #ffffff;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .close {
-	color: #ffffff;
-	transition: 0.5s;
-	font-size: 3rem;
+  color: #ffffff;
+  transition: 0.5s;
+  font-size: 3rem;
 }
 
 .close:hover {
-	color: rgb(4, 0, 255);
-	
+  color: rgb(4, 0, 255);
 }
 
 .ticket-btn {
-	background-color: #274181;
-	color: #ffffff;
-	transition: 0.5s;
+  background-color: #274181;
+  color: #ffffff;
+  transition: 0.5s;
 }
 
 .ticket-btn:hover {
-	background-color: #fff;
-	color: #274181;
-	border: 1px solid #274181;
+  background-color: #fff;
+  color: #274181;
+  border: 1px solid #274181;
 }
 
 .control-label {
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* .loader_bg {
 	width: 100%;
@@ -351,19 +358,18 @@ box-shadow:  7px 7px 14px #666666,
 } */
 
 .loader_bg {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
-	z-index: 1;
-	
-	display: none;
-	justify-content: center;
-	align-items: center;
-  
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+  z-index: 1;
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
 
 /* .loader {
 	width: 48px;
@@ -400,8 +406,7 @@ box-shadow:  7px 7px 14px #666666,
 	}
   }  */
 
-
-  /* .loader {
+/* .loader {
     position: absolute;
 	top: 50%;
   	left: 50%;
@@ -436,32 +441,39 @@ box-shadow:  7px 7px 14px #666666,
     }
   } */
 
-
-  .loader {
-    position: relative;
-    width:  48px;
-    height: 48px;
-    background: #274181;
-    transform: rotateX(65deg) rotate(45deg);
-    /* // remove bellows command for perspective change
+.loader {
+  position: relative;
+  width: 48px;
+  height: 48px;
+  background: #274181;
+  transform: rotateX(65deg) rotate(45deg);
+  /* // remove bellows command for perspective change
     //transform: perspective(200px) rotateX(65deg) rotate(45deg);  */
-    color: #fff;
-    animation: layers1 1s linear infinite alternate;
-  }
-  .loader:after {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: rgba(255, 255, 255, 0.7);
-    animation: layerTr 1s linear infinite alternate;
-  }
+  color: #fff;
+  animation: layers1 1s linear infinite alternate;
+}
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.7);
+  animation: layerTr 1s linear infinite alternate;
+}
 
-  @keyframes layers1 {
-    0% { box-shadow: 0px 0px 0 0px  }
-   90% , 100% { box-shadow: 20px 20px 0 -4px  }
+@keyframes layers1 {
+  0% {
+    box-shadow: 0px 0px 0 0px;
   }
-  @keyframes layerTr {
-    0% { transform:  translate(0, 0) scale(1) }
-    100% {  transform: translate(-25px, -25px) scale(1) }
+  90%,
+  100% {
+    box-shadow: 20px 20px 0 -4px;
   }
-      
+}
+@keyframes layerTr {
+  0% {
+    transform: translate(0, 0) scale(1);
+  }
+  100% {
+    transform: translate(-25px, -25px) scale(1);
+  }
+}
